pictor (2.0) UNRELEASED; urgency=low

  * Initial packaging

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 26 Jan 2010 23:40:48 -0600