@@ -1,3 +1,4 @@
 debian/apache.conf  etc/pictor
-index.php usr/share/pictor/index.php
+settings.php etc/pictor
+index.php usr/share/pictor
 thumbs usr/lib/pictor
