@@ -1,0 +1,13 @@
+<?php
+
+// Edit this file to your liking
+
+$TITLE = "Pictor Album Viewer";
+$PHOTOGRAPHER = "";
+$PHOTOGRAPHER_EMAIL = "";
+$RAND_ALBUMS = array();
+$EDIT_PW = "s0me_passw0rd";
+$COLUMNS = 6;
+$THUMB_COLUMNS = 4;
+
+?>
