@@ -1,13 +1,0 @@
-<?php
-
-// Edit this file and rename to settings.php
-
-$TITLE = "Tux's Photo Collection";
-$PHOTOGRAPHER = "Tux Himself";
-$PHOTOGRAPHER_EMAIL = "tux@example.com";
-$RAND_ALBUMS = array();
-$EDIT_PW = "s0me_passw0rd";
-$COLUMNS = 6;
-$THUMB_COLUMNS = 4;
-
-?>
